--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "astro-boilerplate",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://tusharsaxena01.github.io/Astro-Boilerplate",
+  "homepage": "https://tusharsaxena01.github.io/Astro-BoilerPlate",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -13,7 +13,7 @@
     "build-types": "tsc --noEmit --pretty",
     "prepare": "husky install",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@astrojs/react": "^3.0.7",
